<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="mp3_names">
        <item>父亲</item>
        <item>那些年</item>
        <item>为爱走天涯</item>
        <item>星月神话</item>
        <item>许愿</item>
        <item>夜空中最亮的星(Remix版)</item>
        <item>一生爱你一个</item>
        <item>爱的魔法</item>
        <item>爱的供养</item>
        <item>里山</item>
        <item>悟</item>
        <item>琉璃月</item>
        <item>everytime you kissed me</item>
        <item>Black Blue Room</item>
        <item>Eyes On Me</item>
        <item>melodies of life</item>
    </string-array>
    
    <string-array name="mp3_urls">
        <item>父亲</item>
        <item>那些年</item>
        <item>为爱走天涯</item>
        <item>星月神话</item>
        <item>许愿</item>
        <item>夜空中最亮的星(Remix版)</item>
        <item>一生爱你一个</item>
        <item>爱的魔法</item>
        <item>爱的供养</item>
        <item>里山</item>
        <item>悟</item>
        <item>琉璃月</item>
        <item>everytime you kissed me</item>
        <item>Black Blue Room</item>
        <item>Eyes On Me</item>
        <item>melodies of life</item>
    </string-array>

    <!-- menu -->
    <string name="user_name">姓名：</string>
    <string name="user_edit">编辑</string>
    <string name="user_description">简介：</string>
    <string name="messages_count">信息</string>
    <string name="followers_count">关注</string>
    <string name="friends_count">粉丝</string>
    <string name="download">下载</string>
    <string name="mp3_list_add">歌单+</string>

    
    <!-- 本地音乐页面 -->
    <string name="local_music">本机音乐</string>
    <string name="local_download_music">播放器音乐</string>
    <string name="local_music_list">音乐歌单</string>
   
    <!-- 歌曲控制栏目 -->
    <string name="current_time">01:26</string>
    <string name="end_time">03:56</string>
    
    <!-- 歌曲卡片 -->
    <string name="music_name"></string>
    <string name="music_al"></string>
    
    <!-- ActionBar -->
    <string name="home">本地</string>
    <string name="net_music">网络</string>
    <string name="hot">热门</string>
    
    <!-- 注册框 -->
    <string name="user_register">注册</string>
    <string name="user_login">登录</string>
    <string name="user_reg_log">注册/登录</string>
    
    <!-- 歌曲详情页面 -->
    <string name="description_details">详细介绍：</string>
    <string name="ar">歌手：</string>
    <string name="al">专辑：</string>
    <string name="song_by">作曲：</string>
    <string name="sw">作词：</string>
    <string name="ls">后期：</string>
    <string name="ps">海报：</string>
    
</resources>